ammended film controller and film services to take individual parameters